@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-12-05T02:01:09Z",
+  "timestamp" : "2025-12-15T02:08:04Z",
   "count_outdated" : 1626,
   "uniques_outdated" : 1146,
-  "count" : 1627,
-  "uniques" : 1147,
+  "count" : 1628,
+  "uniques" : 1148,
   "clones" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
